# django-tutorial

./: .gitignore  pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py
mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: detail.html
