[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = "Django tutorial"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_tutorial"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
